k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springboot-__CI_PROJECT_NAME__
  name: springboot
spec:
  ports:
    - name: spring
      port: 8080
      targetPort: 8080
  selector:
    app: springboot-__CI_PROJECT_NAME__
---
